Change Network creation(not working)
Signed-off-by: Denis Bonnand <denis.bonnand@supergrid-institute.com>